# stock-bench

./: .env.example  .gitignore  README.md  SETUP.md  TODO.md  models.json  plan.txt  pyproject.toml
design_document/: 0_simple_summary.md  1_concept_and_design.md  2_inner_loop.md  3_middle_and_outer_loops.md  4_operations_and_security.md  5_reference_material.md  6_implementation.md  7_appendices.md  readme.md
prompts/: bidder_bootstrap.txt  bidder_production.txt  evaluator.txt  executor.txt  generator.txt
src/stock_bench/: __init__.py  api.py  cli.py  config.py  logging_utils.py  market.py  models.py  orchestrator.py  parsing.py  prompt_loader.py  storage.py  storage_schema.sql  tasks.py
src/stock_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stock_bench/providers/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
src/stock_bench/static/: app.js  index.html  styles.css
tests/: test_orchestrator.py  test_scoring.py  test_storage.py  test_tasks.py
